metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Product__c/Platinum_Offer_Item_Product__c.object-meta.xml
<CustomObject>
    <description>LAMBDA-53172 Create the data objects and relationships required to capture platinum feedback and set up on Pivotal</description>
    <label>Platinum Offer Item Product</label>
    <nameField>
        <label>Platinum Offer Item Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platinum Offer Item Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>