metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Product__c/fields/Is_Item_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Item_Active__c</fullName>
    <description>Field to check if related Platinum offer item is active</description>
    <formula>Platinum_Offer_Item__r.Active__c</formula>
    <inlineHelpText>Shows if the platinum offer item is active</inlineHelpText>
    <label>Is Item Active</label>
    <type>Checkbox</type>
</CustomField>