metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Product__c/fields/Platinum_Offer_Item__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Offer_Item__c</fullName>
    <description>LAMBDA-53172 Platinum offer item record related to the product</description>
    <inlineHelpText>Parent Platinum offer item related to the product</inlineHelpText>
    <label>Platinum Offer Item</label>
    <referenceTo>Platinum_Offer_Item__c</referenceTo>
    <relationshipLabel>Platinum Offer Item Products</relationshipLabel>
    <relationshipName>Platinum_Offer_Item_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>