metadata/sf-prod/force-app/main/default/objects/Platinum_Offer_Item_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-53172 Product related to the platinum offer item</description>
    <inlineHelpText>Product related to platinum offer item</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Platinum Offers</relationshipLabel>
    <relationshipName>Platinum_Offer_Item_Products</relationshipName>
    <type>Lookup</type>
</CustomField>